--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
   <head>
     <title>Aurelia - maintcar</title>
     <link rel="stylesheet" href="jspm_packages/npm/font-awesome@4.4.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="styles/css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
-  <body aurelia-app="animation-main">
+  <body aurelia-app="main">
     <div class="splash">
       <div class="message">Aurelia maintcar</div>
       <i class="fa fa-spinner fa-spin"></i>
@@ -15,7 +14,7 @@
     <script src="config.js"></script>
     <script>
       System.import('aurelia-bootstrapper');
-      
+
     </script>
   </body>
 </html>
